fixed the ol on mobile; moved the number marker to the top

--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -3,13 +3,14 @@ body {
 
 	.site {
 		background-color: transparent;
-		max-width: em(1200);
+		max-width: em(1200px);
 		margin: 0 auto;
 		display: flex;
 		flex-direction: column;
 		min-height: 100vh;
+		padding: 0 1rem;
 	
-		@include mq(em(1200)) {
+		@include mq(em(1200px)) {
 		  .full-bleed {
 			width: 100vw;
 			position: relative;
