--- a/sass/components/content/_how-to-order.scss
+++ b/sass/components/content/_how-to-order.scss
@@ -10,29 +10,31 @@
   }
 
   ol {
-    padding-left: 3rem;
-
+    padding: 0;
     li {
       padding: 0.5rem 0;
+      padding-top: 5rem;
 
       h3 {
-        margin: 2rem 2rem 0;
+        margin-top: 2rem;
         color: $brand_secondary;
+        position: relative;
+          
+        &::before{
+          top: -4rem;
+          left: 0;
+          right: 0;
+        }
       }
 
       p {
-        margin: 0.5rem 2rem 1.5rem;
+        margin-top: 0.5rem;
       }
     }
   }
 
-  .button {
-    margin-left: 2rem;
-  }
-
   .contact {
-    margin-left: 2rem;
-    margin-top: 1rem;
+    margin: 1rem 0 1.5rem 0;
     padding: 1rem;
     border-radius: 10px;
     border: 2px dashed;
@@ -42,16 +44,30 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @include mq(768px){
     ol {
+      padding-left: 3rem;
       li {
         flex-direction: column;
         align-items: flex-start;
 
-        &::before {
-          margin-bottom: 0.5rem;
+        h3 {
+          margin: 2rem 2rem 0;
+
+          &::before {
+            margin-bottom: 0.5rem;
+          }
+        }
+        p {
+          margin: 0.5rem 2rem 1.5rem;
         }
       }
+    }
+    .button {
+      margin-left: 2rem;
+    }
+    .contact {
+      margin-left: 2rem;
     }
   }
 }
